Add last update date
Add last update date and update probe data.

--- a/data/measurements.json
+++ b/data/measurements.json
@@ -137143,6 +137143,9 @@
       "type": "scalar"
     }
   }, 
+  "meta": {
+    "lastUpdate": "2017-01-05"
+  }, 
   "revisions": {
     "030fa1665346": {
       "channel": "beta", 
