Update to the latest data changes
To accommodate nightly data, the data structure had to change a bit.
revisions.json now has a channel separation on the top-level.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ hg-data/Scalars.yaml
 hg-data/parse_scalars.py
 
 data/jquery-3.1.1.min.js
+
+data/general.json
+
+data/probes.json
+
+data/revisions.json
