--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,38 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# pre-react ignores
 *.pyc
-
 hg-data/histogram_tools.py
-
 hg-data/Histograms.json
-
 hg-data/nsDeprecatedOperationList.h
-
 hg-data/UseCounters.conf
-
 hg-data/dom/base/usecounters.py
-
 hg-data/Scalars.yaml
-
 hg-data/parse_scalars.py
-
 data/jquery-3.1.1.min.js
-
 data/general.json
-
 data/probes.json
-
 data/revisions.json
+data/db.json
