--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -31,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cypress": "^3.3.1",
     "json-server": "^0.14.2"
   }
 }
