--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3-scale": "^3.0.0",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
+    "env-cmd": "^9.0.3",
     "jquery-param": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -31,7 +32,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "cypress": "^3.3.1",
-    "json-server": "^0.14.2"
+    "cypress": "^3.3.1"
   }
 }
