--- a/.gitignore
+++ b/.gitignore
@@ -21,14 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
 
-# pre-react ignores
-*.pyc
-hg-data/histogram_tools.py
-hg-data/Histograms.json
-hg-data/nsDeprecatedOperationList.h
-hg-data/UseCounters.conf
-hg-data/dom/base/usecounters.py
-hg-data/Scalars.yaml
-hg-data/parse_scalars.py
+# local JSON fixtures
 /data
