--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ BROWSER='firefox'
 REACT_APP_DATA_GENERAL='https://probeinfo.telemetry.mozilla.org/firefox/general'
 REACT_APP_DATA_REVISIONS='https://probeinfo.telemetry.mozilla.org/firefox/revisions'
 REACT_APP_DATA_PROBES='https://probeinfo.telemetry.mozilla.org/firefox/all/main/all_probes'
-REACT_APP_DATA_ENVIRONMENT='https://telemetry.mozilla.org/probe-dictionary/environment.json'
-REACT_APP_DATA_OTHER_FIELDS='https://telemetry.mozilla.org/probe-dictionary/other_fields.json'
-REACT_APP_DATA_DATASETS='https://telemetry.mozilla.org/probe-dictionary/datasets.json'
+REACT_APP_DATA_ENVIRONMENT='https://probe-dictionary.herokuapp.com/json/environment.json'
+REACT_APP_DATA_OTHER_FIELDS='https://probe-dictionary.herokuapp.com/json/other_fields.json'
+REACT_APP_DATA_DATASETS='https://probe-dictionary.herokuapp.com/json/datasets.json'
