--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "jquery-param": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.3.1",
     "react-refetch": "^2.0.3",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
