--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "d3-array": "^2.2.0",
     "d3-axis": "^1.0.12",
@@ -13,7 +14,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.3.1",
-    "react-refetch": "^2.0.3",
     "react-scripts": "^3.3.1"
   },
   "scripts": {
