--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery-param": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-json-view": "^1.19.1",
     "react-markdown": "^4.3.1",
     "react-scripts": "^3.3.1"
   },
