--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.8.6",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.3.1",
-    "react-scripts": "^3.3.1"
+    "react-scripts": "^3.3.1",
+    "throttle-debounce": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
