--- a/package.json
+++ b/package.json
@@ -1,39 +1,24 @@
 {
-  "name": "probe-dictionary-mozilla",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.3.1",
-    "d3-array": "^2.2.0",
-    "d3-axis": "^1.0.12",
-    "d3-scale": "^3.0.0",
-    "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5",
-    "jquery-param": "^1.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-json-view": "^1.19.1",
-    "react-markdown": "^4.3.1",
-    "react-scripts": "^3.3.1",
-    "throttle-debounce": "^2.1.0"
-  },
+  "name": "svelte-app",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "cypress open",
-    "eject": "react-scripts eject"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "cypress": "^3.4.1"
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "immer": "3.2.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "@rollup/plugin-replace": "2.3.3",
+    "sirv-cli": "^0.4.4",
+    "throttle-debounce": "2.2.1"
   }
 }
