--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@rollup/plugin-replace": "2.3.3",
     "sirv-cli": "^0.4.4",
+    "snarkdown": "1.2.2",
     "throttle-debounce": "2.2.1"
   }
 }
