--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   ],
   "devDependencies": {
     "@babel/preset-env": "^7.12.7",
-    "cypress": "^3.4.1",
-    "jest": "^26.6.3"
+    "cypress": "^3.4.1"
   }
 }
